saas_apps/static/src/css/calculator.css
.col-lg-12{
    flex: 0 0 100%;
    max-width: 100%;
}

#price{
    font-size: 32px;
    display: inline;
}

.users-qty-change-buttons{
    max-width: 30px;
    max-height: 30px;
    opacity: 0.5;
}

.loader{
    position: fixed;
    z-index: 99;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: white;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0.5;
}

.status{
    font-size: 26px;
    color: black;
    position: fixed;
    margin-top: -70px;
}

.loader > img {
    width: 100px;
    opacity: 0.6;
    transform: rotate(-30deg);
}

.transition {
    transition: 0.3s;
}

.app{
    max-height: 70px;
    display: flex;
    margin-bottom: 10px;
    min-width: 174px;
}

.app-data{
    margin-left: 5%;
}

.price-value{
    display: inline;
}

.period{
    display: inline;
}

.green-border{
    border: 2px solid green;
}

.normal-border{
    border: 2px solid #FFFFFF;
}

.hid{
    display: none;
}

.fnt-24{
    font-size: 24px;
}

.leftstr, .rightstr {
    float: left;
    width: 50%;
}

.rightstr {
    text-align: right;
}

.fnt-larger{
    font-size: larger;
}

@media (min-width: 1400px) {
    #price-window
    {   
        position: fixed;
        right: 30%;
        top: 20%;
        width: 15%;
        min-width: 20%;
        z-index: 1;
    }

    .page-alignment{
        min-width: 640px;
    }

    .main-column{
        margin-right: auto;
        margin-left: 10%;
        max-width: 50%;
    }
}

@media (min-width: 999px) {
    #price-window
    {   
        position: fixed;
        right: 15%;
        top: 15%;
        width: 20%;
        z-index: 1;
    }

    .main-column{
        margin-right: auto;
        margin-left: 10%;
        max-width: 45%;
    }

    .page-alignment{
        min-width: 640px;
    }

    .app{
        margin-left: 7px;
        max-width: 31%;
    }
}

@media (max-width: 799px) {
    #price-window
    {   
        position: fixed;
        right: 0;
        bottom: -6%;
        width: 100%;
        z-index: 1;
    }
    .container{
        margin-left: auto !important;
    }

    .main-column{
        margin-right: auto;
        margin-left: 10%;
        max-width: 80%;
    }
}

.col-lg-9{
    padding-left: 0px;
}

